--- a/iOSDemo/Podfile
+++ b/iOSDemo/Podfile
@@ -58,5 +58,6 @@ target 'iOSDemo' do
   pod 'pdftotxt'
 #  pod 'SwiftOCR'
   pod 'LZUberSignature', '~> 1.0.4'
+  pod 'lottie-ios', '~> 3.1.8'
 end
 
