--- a/iOSDemo/Podfile
+++ b/iOSDemo/Podfile
@@ -59,5 +59,6 @@ target 'iOSDemo' do
 #  pod 'SwiftOCR'
   pod 'LZUberSignature', '~> 1.0.4'
   pod 'lottie-ios', '~> 3.1.8'
+  pod 'SVGAPlayer', '~> 2.3.3'
 end
 
